--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -12,6 +12,10 @@ server {
         try_files $uri =404;
     }
 
+    location = /stream/embed {
+        try_files /embed.html =404;
+    }
+
     location ~ ^/(nodes|register|unregister|status|summary|wd/hub|session)(/.*)?$ {
         proxy_pass http://proxy:8080$request_uri;
         proxy_http_version 1.1;
