Serve frontend over HTTP on 8080

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,16 +1,7 @@
-# HTTPS server - SSL handled inside Docker container
+# HTTP server (no SSL)
 server {
-    listen 443 ssl;
+    listen 8080;
     server_name _;
-
-    # SSL certificate configuration
-    ssl_certificate /etc/nginx/ssl/cert.crt;
-    ssl_certificate_key /etc/nginx/ssl/cert.key;
-
-    # SSL configuration for better security
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!aNULL:!MD5;
-    ssl_prefer_server_ciphers on;
 
     root /usr/share/nginx/html;
     index index.html;
