--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     image: appium-selenium-proxy
     ports:
       - "8090:8090"
+    extra_hosts:
+      - "devicehub.qa.fortinet-us.com:10.160.13.118"
 
   frontend:
     build:
@@ -16,3 +18,5 @@ services:
     volumes:
       - ./ssl/tls.crt:/etc/nginx/ssl/cert.crt:ro
       - ./ssl/tls.key:/etc/nginx/ssl/cert.key:ro
+    extra_hosts:
+      - "devicehub.qa.fortinet-us.com:10.160.13.118"
